--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,7 +2,7 @@ name: production CI
 
 on:
   push:
-    branches: [ production ]
+    branches: [production]
 
 jobs:
   build:
@@ -10,7 +10,9 @@ jobs:
 
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
+        with:
+          ref: production
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
