--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -2,7 +2,7 @@ name: staging CI
 
 on:
   push:
-    branches: [ staging ]
+    branches: [staging]
 
 jobs:
   build:
@@ -10,7 +10,9 @@ jobs:
 
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
+        with:
+          ref: staging
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
