추가 : base app, ssl_key

--- a/.ebextensions/07-kafka_consumer.config
+++ b/.ebextensions/07-kafka_consumer.config
@@ -30,4 +30,4 @@ container_commands:
   04_enable_kafka_consumer:
     command: "systemctl enable kafka_consumer.service"
   05_start_kafka_consumer:
-    command: "systemctl start kafka_consumer.service"
+    command: "systemctl restart kafka_consumer.service"
