수정: 서버 세팅 통일 (nginx, procfile)

--- a/.platform/nginx/conf.d/proxy.conf
+++ b/.platform/nginx/conf.d/proxy.conf
@@ -1,10 +1,20 @@
-keepalive_timeout 240s;
-client_header_timeout   1800s;
-client_body_timeout     1800s;
-client_max_body_size    1000M;
-send_timeout            1800s;
-proxy_connect_timeout   1800s;
-proxy_read_timeout      1800s;
-proxy_send_timeout      1800s;
-fastcgi_send_timeout 1800s;
-fastcgi_read_timeout 1800s;
+# Connection and timeout settings
+keepalive_timeout        20s;      # 유지 연결(Keep-Alive) 타임아웃 시간 (초 단위)
+client_header_timeout    20s;      # 클라이언트 헤더 수신 타임아웃 (초 단위)
+client_body_timeout      20s;      # 클라이언트 본문 수신 타임아웃 (초 단위)
+client_max_body_size     1000M;    # 클라이언트 요청 본문의 최대 크기
+send_timeout             20s;      # 서버에서 응답 전송 타임아웃 (초 단위)
+
+# Proxy and FastCGI timeout settings
+proxy_connect_timeout    20s;      # 프록시 연결 타임아웃 (초 단위)
+proxy_read_timeout       20s;      # 프록시에서 응답 읽기 타임아웃 (초 단위)
+proxy_send_timeout       20s;      # 프록시로 요청 전송 타임아웃 (초 단위)
+fastcgi_send_timeout     20s;      # FastCGI로 요청 전송 타임아웃 (초 단위)
+fastcgi_read_timeout     20s;      # FastCGI에서 응답 읽기 타임아웃 (초 단위)
+
+# Buffer and request size settings
+client_body_buffer_size      128k;  # 클라이언트 본문을 메모리에 버퍼링하는 크기
+proxy_buffer_size            16k;   # 프록시에서 단일 응답 헤더를 버퍼링하는 크기
+proxy_buffers                4 32k; # 프록시 응답 본문을 버퍼링하는 버퍼 개수와 크기
+proxy_busy_buffers_size      64k;   # 버퍼가 바쁠 때 사용되는 추가 버퍼 크기
+large_client_header_buffers  4 16k; # 큰 클라이언트 헤더 요청을 처리하는 버퍼 개수와 크기
